 -- Add experimental "IAX2" protocol
 -- Add "Enhanced" AGI with audio pass-through (voice recognition anyone?)
 -- Choose best priority from codec from allow/disallow
 -- Reject SIP calls to self
 -- Allow SIP registration to provide an alternative contact
 -- Make HOLD on SIP make use of asterisk MOH
 -- Add supervised transfer (tested with Pingtel only)
 -- Allow maxexpirey and defaultexpirey to be runtime configurable for SIP
 -- Preliminary codec 13 support (RFC3389)
 -- Add app_authenticate for general purpose authentication
 -- Optimize RTP and smoother
 -- Create special variable "EXTEN-n" where it is extension stripped by n MSD
 -- Fix uninitialized frame pointer in channel.c
 -- Add global variables support under [globals] of extensions.conf
 -- Add macro support (show application Macro)
 -- Allow [123-5] etc in extensions
 -- Allow format of App(arg1,arg2,...) instead of just App,arg1|arg2 in dialplan
 -- Add message waiting indicator to SIP
 -- Fix double free bug in channel.c
Asterisk 0.3.0
 -- Add fastfoward, rewind, seek, and truncate functions to streams
 -- Support registration
 -- Add G729 format
 -- Permit applications to return a digit indicating new extension
 -- Change "SHUTDOWN" to "STOP" in commands
 -- SIP "Hold" fixes and VXML URI support
 -- New chan_zap with 160 sample chunk size
 -- Add DTMF, MF, and Fax tone detector to dsp routines
 -- Allow overlap dialing (inbound) on PRI
 -- Enable tone detection with PRI
 -- Add special information tone detection
 -- Add Asterisk DB support
 -- Add pulse dialing
 -- Re-record all system prompts
 -- Change "timelen" to samples for better accuracy
 -- Move to editline, eliminating readline dependency
 -- Add peer "poke" support to SIP and IAX
 -- Add experimental call progress detection
 -- Add SIP authentication (digest)
 -- Add RDNIS
 -- Reroute faxes to "fax" extension
 -- Create ISDN/modem group concept
 -- Centralize indication
 -- Add initial MGCP support
 -- SIP debugging cleanup